add several containers

--- a/webio/templates/home.html
+++ b/webio/templates/home.html
@@ -4,17 +4,105 @@
 
   <div class="container-fluid" id="first-con">
 
-    <div class="wrapper">
+    <div class="container-fluid" id="intro-txt">
+      <div class="wrapper">
         <div class="static-txt">print("</div>
         <ul class="dynamic-txts">
             <li><span>Hello</span></li>
             <li><span>World</span></li>
-            <li><span>I am</span></li>
-            <li><span>ROY</span></li>
         </ul>
         <div class="static-txt">")</div>
+      </div>
     </div>
 
+    
+    
+  
   </div>
+
+  <div class="container-fluid" id="second-con">
+    
+    <div class="profile-box"> 
+      <div class="circle-profile"></div>
+      <div class="circle1"></div>
+      <div class="circle2"></div>
+    </div>
+    
+    <div class="text-box">
+      <h2>Hi Roy here,</h2>
+      <br>
+      <div class="body-box">
+        <p>
+          Lorem ipsum dolor sit amet. Est dolores omnis cum fugit consequatur sit perferendis praesentium non 
+          galisum voluptas ut beatae voluptatema reprehenderit doloremque? Eum odit culpa sed voluptatem minima
+          non similique dolores. 33 nihil mollitia et facilis porro et minus dolorem et molestiae quas aut dolores 
+          molestias et facere voluptatem et voluptatem aspernatur.
+        </p>
+
+        
+      </div>
+      
+    </div>
+   
+ 
+  </div>
+
+  <div class="container-fluid" id="third-con">
+    <p>SKILLS & PROJECTS</p>
+  
+
+  </div>
+
+  <div class="container-fluid" id="fourth-con">
+    
+  </div>
+
+  <div class="container-fluid" id="fifth-con">
+        <!---->
+    <div class="bubbles">
+      <span style="--i:11;"></span>
+      <span style="--i:12;"></span>
+      <span style="--i:24;"></span>
+      <span style="--i:10;"></span>
+      <span style="--i:14;"></span>
+      <span style="--i:25;"></span>
+      <span style="--i:13;"></span>
+      <span style="--i:18;"></span>
+      <span style="--i:19;"></span>
+      <span style="--i:22;"></span>
+      <span style="--i:16;"></span>
+      <span style="--i:20;"></span>
+      <span style="--i:13;"></span>
+      <span style="--i:22;"></span>
+      <span style="--i:14;"></span>
+      <span style="--i:15;"></span>
+      <span style="--i:21;"></span>
+      <span style="--i:17;"></span>
+      <span style="--i:23;"></span>
+      <span style="--i:11;"></span>
+      <span style="--i:12;"></span>
+      <span style="--i:24;"></span>
+      <span style="--i:10;"></span>
+      <span style="--i:14;"></span>
+      <span style="--i:25;"></span>
+      <span style="--i:13;"></span>
+      <span style="--i:18;"></span>
+      <span style="--i:19;"></span>
+      <span style="--i:22;"></span>
+      <span style="--i:16;"></span>
+      <span style="--i:20;"></span>
+      <span style="--i:13;"></span>
+      <span style="--i:22;"></span>
+      <span style="--i:14;"></span>
+      <span style="--i:11;"></span>
+      <span style="--i:12;"></span>
+      <span style="--i:24;"></span>
+      <span style="--i:30;"></span>
+    </div>
+  </div>
+
+
+
+
 
 {% endblock %}
