--- a/webio/static/css/home.css
+++ b/webio/static/css/home.css
@@ -14,16 +14,22 @@ body {
     height: 100vh;
 }
 
+/* first container */
 .container-fluid#first-con {
     background: black;
     font-family: 'Poppins', sans-serif;
+}
+
+#intro-txt {
+    position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-left: -15px;
 }
 
 .container-fluid#first-con .wrapper{
-    display: inline-flex;
+    display: inline-flex;  
 }
 
 .container-fluid#first-con .wrapper .static-txt{
@@ -74,7 +80,7 @@ ul {
     background: black;
     border-left: 2px solid whitesmoke;
     left: 0;
-    animation: typing 1s steps(10) infinite;
+    animation: typing 1s steps(8) infinite;
 }
 
 @keyframes typing {
@@ -84,7 +90,151 @@ ul {
     }
 }
 
+/* BUBBLES */
+#fifth-con .bubbles{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
 
+.bubbles span{
+    z-index: 1;
+    position: relative;
+    width: 20px;
+    height: 20px;
+    background: white;
+    margin: 0 10px;
+    border-radius: 50%;
+    box-shadow: 0 0 5px white, 0 0 25px beige, 0 0 50px beige;
+    animation: animate 15s linear infinite;
+    animation-duration: calc(500s / var(--i));
+}
+
+.bubbles span:nth-child(even){
+    box-shadow: 0 0 3px white, 0 0 20px beige, 0 0 40px beige;
+}
+
+@keyframes animate {
+
+    0%{
+        transform: translateY(0) scale(0);
+    }
+
+    100%{
+        transform: translateY(-500vh) scale(5);    
+    }
+    
+}
+
+/* second container */
+
+.container-fluid#second-con {
+     background-color: skyblue;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     font-family: 'Poppins', sans-serif;
+}
+
+.profile-box {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.circle-profile {   
+    background-color: whitesmoke;
+    height: 300px;
+    width: 300px;
+    border-radius: 50%;
+    z-index: 3;   
+    margin-bottom: 15px;
+    filter: drop-shadow(5px 8px 4px rgba(89, 87, 87, 1));
+   
+}
+
+.circle1 {
+    background-color: whitesmoke;
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    z-index: 2;
+    margin-bottom: 15px;   
+    filter: drop-shadow(5px 8px 4px rgba(89, 87, 87, 1));
+}
+
+.circle2 {
+    background-color: whitesmoke;
+    height: 75px;
+    width: 75px;
+    border-radius: 50%;
+    z-index: 1;   
+    filter: drop-shadow(5px 8px 4px rgba(89, 87, 87, 1));
+}
+.text-box {
+    margin-left: 150px;
+    z-index: 3;
+}
+
+.text-box h2{
+    z-index: 3;
+    font-size: 30px;
+    font-weight: bold;
+    color: black;
+}
+
+.text-box .body-box {
+    position: relative;
+    /*background-color: blueviolet;*/
+    height: 300px;
+    width: 500px;
+    top:3rem;
+}
+
+.text-box  p{
+    font-size: 16px;
+    color: black;
+    z-index: 3;
+}
+
+/* third container */
+.container-fluid#third-con {
+    background-color: whitesmoke;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Monospace', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    height: 8rem ;
+}
+
+#third-con p {
+    color: black;
+    font-size: 50px;
+    font-weight: 700;
+    z-index: 3;
+}
+
+/* fourth container */
+.container-fluid#fourth-con {
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Poppins', sans-serif;
+}
+
+/* fifth container */
+.container-fluid#fifth-con {
+    background-color: skyblue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Monospace', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    height: 10rem ;
+}
 
 
 
