--- a/webio/static/css/home.css
+++ b/webio/static/css/home.css
@@ -70,6 +70,7 @@ ul {
 
 .dynamic-txts li span{
      position: relative;
+     z-index: 3;
 }
 
 .dynamic-txts li span::after{
@@ -175,7 +176,7 @@ ul {
     filter: drop-shadow(5px 8px 4px rgba(89, 87, 87, 1));
 }
 .text-box {
-    margin-left: 150px;
+    margin-left: 10rem;
     z-index: 3;
 }
 
@@ -223,8 +224,89 @@ ul {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif
 }
+
+#fourth-con .carousel-indicators {
+    position: relative;
+}
+
+#fourth-con .slides {
+    display: flex;
+    align-items: center;
+    justify-content: center;  
+    width: 84rem;
+    height: 38rem;
+}
+
+/* 1st slide */
+#fourth-con #one{
+    background-color: none;
+}
+
+#fourth-con #one .txt-con {
+     margin-left: 5rem;
+     position: relative;
+}
+
+#fourth-con #one .txt-con .title-txt{
+    margin-bottom: 12rem;
+}
+
+#fourth-con #one .txt-con .body-txt{
+    width: 22rem;
+    position: relative;
+    bottom: 9rem;
+}
+
+#fourth-con #one .image-con{
+    display: flex;
+    align-items: center;
+    justify-content: center;  
+}
+
+#fourth-con #one .image-con .firstimgs{
+   margin-right: 5rem;
+   position: relative;
+}
+
+#fourth-con #one #UIA2 {
+    height: 32rem; 
+}
+
+#fourth-con #one #UIA1 {
+    height: 23rem;
+    position: absolute;   
+    bottom: -2rem; 
+    right: -2.5rem;
+
+}
+
+#fourth-con #one #UIB2 {
+    height: 32rem;
+}
+
+#fourth-con #one #UIB1 {
+    height: 23rem;
+    position: absolute;   
+    bottom: -2rem; 
+    right: -2.5rem;
+}
+
+
+
+
+/* 2nd slide */
+#fourth-con #two{
+    background-color: red;
+}
+
+/* 3rd slide */
+#fourth-con #three{
+    background-color: yellow;
+}
+
+
 
 /* fifth container */
 .container-fluid#fifth-con {
