--- a/webio/templates/home.html
+++ b/webio/templates/home.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %} {% block title %} HOME {% endblock %}
-
+{% load static %}
 {% block content %}
+
+
 
   <div class="container-fluid" id="first-con">
 
@@ -47,18 +49,67 @@
  
   </div>
 
+  <!---->
   <div class="container-fluid" id="third-con">
     <p>SKILLS & PROJECTS</p>
-  
-
   </div>
 
+  <!---->
   <div class="container-fluid" id="fourth-con">
+
+    <div id="carouselExampleCaptions" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="slides" id="one">
+            <div class="image-con">
+              <div class="firstimgs">
+                <img src="{% static 'images/UIA2.png' %}" id="UIA2">
+                <img src="{% static 'images/UIA1.png' %}" id="UIA1">
+              </div>
+
+              <div class="firstimgs">
+                <img src="{% static 'images/UIB2.png' %}" id="UIB2">
+                <img src="{% static 'images/UIB1.png' %}" id="UIB1">
+              </div>
+            </div>
+            <div class="txt-con">
+              <div class="title-txt">
+                <h1>UI / UX Design</h1>
+              </div>
+              <div class="body-txt">
+                <p>em voluptatem itaque aut tempore dolores eum voluptatibus corrupti ea molestiae molestiae? Qui iste adipisci sed nisi dolores est eligendi veritatis et dolorum consectetur 33 voluptatem sequi.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="slides" id="two">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="slides" id="three">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> 
     
   </div>
 
+  <!---->
   <div class="container-fluid" id="fifth-con">
-        <!---->
     <div class="bubbles">
       <span style="--i:11;"></span>
       <span style="--i:12;"></span>
