--- a/webio/templates/home.html
+++ b/webio/templates/home.html
@@ -57,7 +57,7 @@
   <!---->
   <div class="container-fluid" id="fourth-con">
 
-    <div id="carouselExampleCaptions" class="carousel slide">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -89,17 +89,33 @@
         </div>
         <div class="carousel-item">
           <div class="slides" id="two">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+            <div class="image-con">
+              <img src="{% static 'images/DC1.png' %}" id="DC1">
+              <img src="{% static 'images/DC2.png' %}" id="DC2">
+            </div>
+            <div class="txt-con">
+              <div class="title-txt">
+                <h1>Duck Counting App</h1>
+              </div>
+              <div class="body-txt">
+                <p>em voluptatem itaque aut tempore dolores eum voluptatibus corrupti ea molestiae molestiae? Qui iste adipisci sed nisi dolores est eligendi veritatis et dolorum consectetur 33 voluptatem sequi.</p>
+              </div>
             </div>
           </div>
         </div>
         <div class="carousel-item">
           <div class="slides" id="three">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+            <div class="image-con">
+              <img src="{% static 'images/game1.png' %}" id="game1">
+              <img src="{% static 'images/game2.png' %}" id="game2">
+            </div>
+            <div class="txt-con">
+              <div class="title-txt">
+                <h1>Game Development</h1>
+              </div>
+              <div class="body-txt">
+                <p>em voluptatem itaque aut tempore dolores eum voluptatibus corrupti ea molestiae molestiae? Qui iste adipisci sed nisi dolores est eligendi veritatis et dolorum consectetur 33 voluptatem sequi.</p>
+              </div>
             </div>
           </div>
         </div>
