working on 5th container

--- a/webio/templates/home.html
+++ b/webio/templates/home.html
@@ -62,6 +62,7 @@
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -119,6 +120,23 @@
             </div>
           </div>
         </div>
+
+        <div class="carousel-item">
+          <div class="slides" id="two">
+            <div class="image-con">
+              <img src="{% static 'images/DC1.png' %}" id="DC1">
+              <img src="{% static 'images/DC2.png' %}" id="DC2">
+            </div>
+            <div class="txt-con">
+              <div class="title-txt">
+                <h1>Duck Counting App</h1>
+              </div>
+              <div class="body-txt">
+                <p>em voluptatem itaque aut tempore dolores eum voluptatibus corrupti ea molestiae molestiae? Qui iste adipisci sed nisi dolores est eligendi veritatis et dolorum consectetur 33 voluptatem sequi.</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div> 
     
@@ -126,6 +144,21 @@
 
   <!---->
   <div class="container-fluid" id="fifth-con">
+    
+    <div class="contact-con">
+      <div class="contact">
+        <h2>CONTACTS</h2>
+      </div>
+      <div class="email-con">
+        <i class="fa-solid fa-envelope"></i>
+        <p>roypnarido@gmail.com</p>
+      </div>
+      <div class="num-con">
+        <i class="fa-solid fa-phone"></i>
+        <p>0927 720 7118</p>
+      </div>
+    </div>
+
     <div class="bubbles">
       <span style="--i:11;"></span>
       <span style="--i:12;"></span>
@@ -166,6 +199,9 @@
       <span style="--i:24;"></span>
       <span style="--i:30;"></span>
     </div>
+
+    
+
   </div>
 
 
