--- a/webio/static/css/home.css
+++ b/webio/static/css/home.css
@@ -70,7 +70,6 @@ ul {
 
 .dynamic-txts li span{
      position: relative;
-     z-index: 3;
 }
 
 .dynamic-txts li span::after{
@@ -153,6 +152,7 @@ ul {
     border-radius: 50%;
     z-index: 3;   
     margin-bottom: 15px;
+    object-fit: contain;
     filter: drop-shadow(5px 8px 4px rgba(89, 87, 87, 1));
    
 }
@@ -184,7 +184,7 @@ ul {
     z-index: 3;
     font-size: 30px;
     font-weight: bold;
-    color: black;
+    color: rgba(51, 51, 51, 1);
 }
 
 .text-box .body-box {
@@ -197,7 +197,7 @@ ul {
 
 .text-box  p{
     font-size: 16px;
-    color: black;
+    color: rgba(51, 51, 51, 1);
     z-index: 3;
 }
 
@@ -212,7 +212,7 @@ ul {
 }
 
 #third-con p {
-    color: black;
+    color: rgba(51, 51, 51, 1);
     font-size: 50px;
     font-weight: 700;
     z-index: 3;
@@ -220,7 +220,7 @@ ul {
 
 /* fourth container */
 .container-fluid#fourth-con {
-    background-color: black;
+    background-color: rgba(51, 51, 51, 1);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -251,10 +251,8 @@ ul {
 
 #fourth-con #one .txt-con .title-txt{
     margin-bottom: 12rem;
-    color: aqua;
-}
-
-#fourth-con #one .txt-con .title-txt. h2 {
+    color: skyblue;
+    font-size: 8vw;
     z-index: 5;
 }
 
@@ -297,6 +295,7 @@ ul {
 #fourth-con #one #UIB2 {
     height: 32rem;
     filter: drop-shadow(5px 8px 4px rgba(9, 8, 8, 1));
+    border-radius: 25px;
 }
 
 #fourth-con #one #UIB1 {
@@ -305,7 +304,8 @@ ul {
     bottom: -2rem; 
     right: -2.5rem;
     z-index: 5;
-    filter: drop-shadow(5px 8px 4px blrgba(9, 8, 8, 1));
+    filter: drop-shadow(5px 8px 4px rgba(9, 8, 8, 1));
+    border-radius: 25px;
 }
 
 
@@ -326,7 +326,7 @@ ul {
    color: skyblue;
 }
 
-#fourth-con #two .txt-con .title-txt. h2 {
+#fourth-con #two .txt-con .title-txt. h1 {
    z-index: 5;
 }
 
@@ -349,14 +349,17 @@ ul {
 
 #fourth-con #two .image-con #DC1 {
     width: 40rem;
+    filter: drop-shadow(5px 8px 4px rgba(9, 8, 8, 1));
+    border-radius: 25px;
 }
 
 #fourth-con #two .image-con #DC2 {
     height: 25rem;
     position: absolute;
     margin-left: 37rem;
-    margin-top: 13rem;
+    margin-top: 11rem;
     z-index: 5;
+    filter: drop-shadow(5px 8px 4px rgba(9, 8, 8, 1));
 }
 
 
@@ -376,7 +379,7 @@ ul {
    color: skyblue;
 }
 
-#fourth-con #three .txt-con .title-txt. h2 {
+#fourth-con #three .txt-con .title-txt. h1 {
    z-index: 5;
 }
 
@@ -398,18 +401,22 @@ ul {
 }
 
 #fourth-con #three .image-con #game1 {
-   height: 25rem ;
-   width: 45rem ;
+   height: 20rem ;
+   width: 40rem ;
    z-index: 5;
    position: absolute;
    margin-left: 10rem;
    margin-top: 12rem;
+   filter: drop-shadow(5px 8px 4px rgba(9, 8, 8, 1));
+   border-radius: 15px;
 }
 
 #fourth-con #three .image-con #game2 {
-    height: 25rem ;
-    width: 45rem ;
+    height: 20rem ;
+    width: 40rem ;
     margin-bottom: 12rem;
+    filter: drop-shadow(5px 8px 4px rgba(9, 8, 8, 1));
+    border-radius: 15px;
 
 }
 
@@ -418,12 +425,51 @@ ul {
 /* fifth container */
 .container-fluid#fifth-con {
     background-color: skyblue;
+    font-family: 'Monospace', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    height: 8.5rem ;
+    color:rgba(51, 51, 51, 1);
+}
+
+#fifth-con .contact-con {
+    position: relative;
+}
+
+
+#fifth-con .contact-con .email-con {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Monospace', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    height: 10rem ;
+    margin-right: 3rem;
+    position: absolute;
 }
+
+#fifth-con .contact-con .email-con p{
+    margin-top: .7rem;
+    margin-left: .4rem;
+}
+
+
+#fifth-con .contact-con .num-con {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 7rem;
+    margin-top: 2rem;
+    position: absolute;
+    
+}
+
+#fifth-con .contact-con .num-con p{
+    margin-left: .4rem;
+    margin-top: .7rem;
+}
+
+
+
+
+
+
+
 
 
 
