--- a/webio/templates/base.html
+++ b/webio/templates/base.html
@@ -13,7 +13,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
         <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}?{% now 'U' %}">
-        
+
+        <script src="{% static 'fontawesomefree/js/all.min.js' %}"></script>
     </head>
 
     <body>
