--- a/webio/templates/home.html
+++ b/webio/templates/home.html
@@ -144,7 +144,7 @@
 
   <!---->
   <div class="container-fluid" id="fifth-con">
-    
+    <!--
     <div class="contact-con">
       <div class="contact">
         <h2>CONTACTS</h2>
@@ -158,54 +158,30 @@
         <p>0927 720 7118</p>
       </div>
     </div>
+    -->
 
-    <div class="bubbles">
-      <span style="--i:11;"></span>
-      <span style="--i:12;"></span>
-      <span style="--i:24;"></span>
-      <span style="--i:10;"></span>
-      <span style="--i:14;"></span>
-      <span style="--i:25;"></span>
-      <span style="--i:13;"></span>
-      <span style="--i:18;"></span>
-      <span style="--i:19;"></span>
-      <span style="--i:22;"></span>
-      <span style="--i:16;"></span>
-      <span style="--i:20;"></span>
-      <span style="--i:13;"></span>
-      <span style="--i:22;"></span>
-      <span style="--i:14;"></span>
-      <span style="--i:15;"></span>
-      <span style="--i:21;"></span>
-      <span style="--i:17;"></span>
-      <span style="--i:23;"></span>
-      <span style="--i:11;"></span>
-      <span style="--i:12;"></span>
-      <span style="--i:24;"></span>
-      <span style="--i:10;"></span>
-      <span style="--i:14;"></span>
-      <span style="--i:25;"></span>
-      <span style="--i:13;"></span>
-      <span style="--i:18;"></span>
-      <span style="--i:19;"></span>
-      <span style="--i:22;"></span>
-      <span style="--i:16;"></span>
-      <span style="--i:20;"></span>
-      <span style="--i:13;"></span>
-      <span style="--i:22;"></span>
-      <span style="--i:14;"></span>
-      <span style="--i:11;"></span>
-      <span style="--i:12;"></span>
-      <span style="--i:24;"></span>
-      <span style="--i:30;"></span>
-    </div>
-
-    
-
+  <div class="bubbles" id="bubbles"></div>
+   
   </div>
 
+  <script>
+    let clientwidth = document.body.clientWidth;
+    let maxBubbles = (clientwidth / 41);
 
-
+    var outputHTML = "";
+    let min = 10;
+    let max = 30;
+  
+    for (var i = 1; i < maxBubbles; i++) {
+      let randomNum = Math.floor(Math.random() * (max - min + 1)) + min;
+      outputHTML += "<span style='--i:" + randomNum + ";'></span>";
+    }
+  
+    document.getElementById("bubbles").innerHTML = outputHTML;
+  </script>
+  <!-- 
+    
+  -->
 
 
 {% endblock %}
